calico-policies/private-network-isolation/calico-v3/us-east/allow-ibm-ports-private.yaml
# This policy opens port 10250 for VPN communication between master and workers,
# port 53 for DNS, port 52311 for IBM BigFix worker node updates, port 2049 for
# communication with NFS file servers, ports 443 and 3260 for communication to
# block storage, port 2040 and 443 on 172.21.0.1 for the master API server local
# proxy, and port 2041 on 172.21.0.1 for the etcd local proxy.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-ibm-ports-private
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 443
      - 2049
      - 3260
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 443
      - 2049
      - 3260
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    destination:
      ports:
      - 443
      nets:
      - 172.21.0.1/32
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 443
      nets:
      - 172.21.0.1/32
    protocol: TCP
  ingress:
  - action: Allow
    destination:
      ports:
      - 53
      - 10250
      - 52311
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 10250
      - 52311
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_private'
  types:
  - Ingress
  - Egress

---

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-ibm-ports-private-iks
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 443
      - 2049
      - 3260
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 443
      - 2049
      - 3260
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    destination:
      ports:
      - 443
      nets:
      - 172.21.0.1/32
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 443
      nets:
      - 172.21.0.1/32
    protocol: TCP
  ingress:
  - action: Allow
    destination:
      ports:
      - 53
      - 10250
      - 52311
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 10250
      - 52311
    protocol: TCP
    source: {}
  order: 1500
  selector: iks.worker.interface == 'private'
  types:
  - Ingress
  - Egress
