calico-policies/private-network-isolation/calico-v3/us-east/allow-sys-mgmt-private.yaml
# This policy allows connections for specific IBM Cloud infrastructure
# (SoftLayer) systems that are used to manage the worker nodes.
# Note that you must include the nets for dal01, dal10, and wdc04.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-sys-mgmt-private
spec:
  ingress:
  - action: Allow
    destination: {}
    source:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Nets for US East zones
      - 10.3.112.0/20 # mon01
      - 10.2.48.0/20 # tor01
      - 10.200.160.0/20 # wdc06
      - 10.200.176.0/20 # wdc07
  order: 1800
  selector: ibm.role == 'worker_private'
  types:
  - Ingress

---

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-sys-mgmt-private-iks
spec:
  ingress:
  - action: Allow
    destination: {}
    source:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Nets for US East zones
      - 10.3.112.0/20 # mon01
      - 10.2.48.0/20 # tor01
      - 10.200.160.0/20 # wdc06
      - 10.200.176.0/20 # wdc07
  order: 1800
  selector: ibm.role == 'worker_private'
  types:
  - Ingress
